tests/specs/ecosystem/std/semver/0_209_0.test
std/semver/0.209.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /range_format.ts:11:17
   | 
11 | export function rangeFormat(range: SemVerRange) {
   |                 ^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /format.ts:25:17
   | 
25 | export function format(semver: SemVer, style: FormatStyle = "full") {
   |                 ^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /comparator_format.ts:11:17
   | 
11 | export function comparatorFormat(comparator: SemVerComparator) {
   |                 ^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /can_parse.ts:5:17
  | 
5 | export function canParse(version: string | SemVer) {
  |                 ^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


